manifests/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
      project: dojo
  serviceName: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        project: dojo
    spec:
      containers:
      - name: redis
        image: redis:6.2
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: data
          mountPath: /data
        resources:
          requests:
              memory: "128Mi"
              cpu: 100m
          limits:
            memory: "128Mi"
            cpu: 100m
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: standard
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
    project: dojo
  ports:
  - port: 6379
    targetPort: 6379
