manifests/guestbook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
      project: dojo
  template:
    metadata:
      labels:
        app: guestbook
        project: dojo
    spec:
      containers:
      - name: guestbook
        image: guestbook:v0.1.0
        ports:
        - containerPort: 3000
          name: http
        resources:
          requests:
              memory: "128Mi"
              cpu: 100m
          limits:
            memory: "128Mi"
            cpu: 100m
        readinessProbe:
          httpGet:
            path: "/healthz"
            port: http
        livenessProbe:
          httpGet:
            path: "/healthz"
            port: http
---
apiVersion: v1
kind: Service
metadata:
  name: guestbook
spec:
  selector:
    app: guestbook
    project: dojo
  ports:
  - port: 3000
    targetPort: http
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook
  labels:
    app: guestbook
    project: dojo
spec:
  ingressClassName: nginx
  rules:
  - host: guestbook.vcap.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: guestbook
            port: 
              name: http
