manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook
  labels:
    app: guestbook
    project: dojo
spec:
  ingressClassName: nginx
  rules:
  - host: guestbook.vcap.me
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: guestbook
            port: 
              name: http
